Adapt to use java 8